--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,43 +2,59 @@
   margin: 0;
   padding: 0;
 }
+#container {
+  height: 60vh;
+  text-align: center;
+  margin-left: 30vw;
+  width: 40vw;
+}
 button {
-  background-image: linear-gradient(19deg, #21d4fd 0%, #b721ff 100%);
-  color: white;
-  font-family: inherit;
-  padding: 0.35em;
-  padding-left: 1.2em;
+  width: 15vw;
+  height: 9vh;
+  border-radius: 10px;
+  margin: 1em;
+  background-color: black;
+  color: aliceblue;
   font-size: 1em;
-  border-radius: 10em;
-  border: none;
-  letter-spacing: 0.05em;
-  margin-left: 35%;
-  overflow: hidden;
-  position: relative;
-  height: 2.8em;
-  padding-right: 3.3em;
-  cursor: pointer;
-  text-transform: uppercase;
-  font-weight: 500;
-  box-shadow:
-    0 0 1.6em rgba(183, 33, 255, 0.3),
-    0 0 1.6em hsla(191, 98%, 56%, 0.3);
-  transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
+  font-family: "Montserrat", sans-serif;
 }
 button:hover {
-  background-image: linear-gradient(19deg, #b721ff 0%, #21d4fd 100%);
-}
-#container {
-  display: grid;
-  grid-template-columns: auto auto auto auto auto auto;
+  background-color: aliceblue;
+  color: black;
+  cursor: pointer;
+  animation: borderradiate 2s;
+
+  font-size: 1.2em;
+  font-family: "Montserrat", sans-serif;
 }
 #child {
-  border: solid 2px blue;
-  background-image: linear-gradient(to left, #b721ff, #21d4fd, #b721ff);
+  border: solid 2px white;
+  background-image: linear-gradient(to left, black, grey, white);
 
   font-weight: bold;
 }
-h1,
-h4 {
-  margin-left: 40%;
+#subcontainer {
+  display: grid;
+  width: 100vw;
+  grid-template-columns: auto auto auto auto;
+}
+#length-input {
+  width: 10vw;
+  height: 7vh;
+  font-size: 2vw;
+  margin: 1em;
+  background-color: lightgrey;
+  border: none;
+  text-align: center;
+}
+#length-input:focus {
+  -appearance: textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  appearance: textfield;
 }
