--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,60 +1,86 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 #container {
-  height: 60vh;
-  text-align: center;
-  margin-left: 30vw;
-  width: 40vw;
+  width: 100%;
+  height: 100vh;
 }
+
 button {
-  width: 15vw;
-  height: 9vh;
-  border-radius: 10px;
-  margin: 1em;
-  background-color: black;
-  color: aliceblue;
-  font-size: 1em;
-  font-family: "Montserrat", sans-serif;
+  margin-left: 40vw;
+  width: 20vw;
+  font-size: 0.8em;
+  padding: 15px 25px;
+  border: unset;
+  border-radius: 15px;
+  color: #212121;
+  z-index: 1;
+  background: #e8e8e8;
+  position: relative;
+  transition: all 2s;
+}
+
+button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  transition: all 2s;
+}
+button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+  background-color: #212121;
+  z-index: -1;
+  transition: all 2s;
 }
 button:hover {
-  background-color: aliceblue;
-  color: black;
-  cursor: pointer;
-  animation: borderradiate 2s;
-
-  font-size: 1.2em;
-  font-family: "Montserrat", sans-serif;
+  color: #e8e8e8;
 }
-#child {
-  border: solid 2px white;
-  background-image: linear-gradient(to left, black, grey, white);
 
-  font-weight: bold;
+button:hover::after {
+  width: 100%;
 }
-#subcontainer {
-  display: grid;
-  width: 100vw;
-  grid-template-columns: auto auto auto auto;
+button:hover::before {
+  width: 100%;
 }
 #length-input {
-  width: 10vw;
-  height: 7vh;
-  font-size: 2vw;
-  margin: 1em;
-  background-color: lightgrey;
+  font-size: 3vw;
+  text-align: center;
+  margin-left: 48vw;
+  background-color: #dadada;
+  border-radius: 5px;
+  outline: none;
   border: none;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  width: 5vw;
+  height: 6vh;
+}
+h4,
+h1 {
+  margin: 2vw;
   text-align: center;
 }
-#length-input:focus {
-  -appearance: textfield;
+#password-container {
+  font-size: 1em;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  appearance: none;
-  margin: 0;
-}
-input[type="number"] {
-  appearance: textfield;
+#child {
+  border: 1px solid white;
+  text-align: center;
+  background-color: black;
+  color: white;
 }
